# rustHunter

./: .env.example  .gitignore  .ignore  Cargo.toml  README.md  agent.md  backend.md  rusthunter.md  search.md
docs/: n8n-workflow.md  troubleshooting.md
n8n/: workflow-apply-review.json
scripts/: start.ps1
src/: config.rs  errors.rs  main.rs  models.rs
src/routes/: apply.rs  mod.rs  search.rs
src/services/: browser.rs  job_search.rs  mod.rs
src/utils/: captcha.rs  delay.rs  mod.rs  session.rs
